# ChangeLog for app-admin/puppet
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.74 2011/04/11 15:04:16 matsuu Exp $

*puppet-2.6.7 (11 Apr 2011)

  11 Apr 2011; MATSUU Takuto <matsuu@gentoo.org> +puppet-2.6.7.ebuild,
  metadata.xml:
  Version bumped. The ebuild was submitted by William Van Hevelingen, bug
  #362801. Added new USE flags.

*puppet-2.6.4 (31 Dec 2010)

  31 Dec 2010; MATSUU Takuto <matsuu@gentoo.org> -puppet-0.25.4-r1.ebuild,
  -puppet-2.6.0.ebuild, -puppet-2.6.0-r1.ebuild, -puppet-2.6.1.ebuild,
  +puppet-2.6.4.ebuild:
  Version bumped, bug #349188. Removed old versions.

*puppet-2.6.2 (04 Nov 2010)

  04 Nov 2010; MATSUU Takuto <matsuu@gentoo.org> +puppet-2.6.2.ebuild:
  Version bumped. Fixed puppet.conf, bug #338439.

*puppet-2.6.1 (23 Sep 2010)

  23 Sep 2010; MATSUU Takuto <matsuu@gentoo.org> +puppet-2.6.1.ebuild:
  Version bumped.

  20 Sep 2010; Guy Martin <gmsoft@gentoo.org> puppet-0.25.5.ebuild:
  hppa stable wrt #325129

  18 Sep 2010; Raúl Porcel <armin76@gentoo.org> puppet-0.25.5.ebuild:
  sparc stable wrt #325129

  15 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org> puppet-2.6.0.ebuild,
  puppet-2.6.0-r1.ebuild:
  Update to the new ruby_add_rdepend syntax (classic-style) and use
  virtual/ruby-ssl rather than reimplementing it by hand.

  13 Aug 2010; Joseph Jezak <josejx@gentoo.org> puppet-0.25.5.ebuild:
  Marked ppc stable for bug #325129.

*puppet-2.6.0-r1 (01 Aug 2010)

  01 Aug 2010; MATSUU Takuto <matsuu@gentoo.org>
  -files/puppet-0.24.6-eix.patch, -puppet-0.24.8-r1.ebuild,
  -files/puppet-0.24.8-rc-update-show.patch, -puppet-0.25.3.ebuild,
  +puppet-2.6.0-r1.ebuild, files/puppet.init, files/puppetmaster.init:
  Fixed pidfile issue, bug #330269. Fixed doc and test handling, bug
  #329305. Removed old versions.

  23 Jul 2010; Markus Meier <maekke@gentoo.org> puppet-0.25.5.ebuild:
  amd64 stable, bug #325129
