@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/puppet
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.74 2011/04/11 15:04:16 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.75 2011/04/29 07:06:14 matsuu Exp $
+
+*puppet-2.6.8 (29 Apr 2011)
+
+  29 Apr 2011; MATSUU Takuto <matsuu@gentoo.org> -puppet-2.6.2.ebuild,
+  -puppet-2.6.4.ebuild, +puppet-2.6.8.ebuild:
+  Version bumped. Fixed test issue, bug #363451. Removed old versions.
 
 *puppet-2.6.7 (11 Apr 2011)
 
